Referencing phonegap.js - not sure why only WP needs to require this, docs seem to indicate it should be for all.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             margin-top: -16px;
         }
     </style>
+    <script type="text/javascript" src="phonegap.js"></script>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script type="text/javascript">(function(i){function k(f,c){var a=document.createElement("meta");a.setAttribute("name",f);a.setAttribute("content",c);n.appendChild(a)}var n=i.document.head;if("undefined"===typeof c)var c=i.Ext={};c.blink=function(f){var i=f.js||[],f=f.css||[],a,j,b,d,l;navigator.userAgent.match(/IEMobile\/10\.0/)&&(a=document.createElement("style"),a.appendChild(document.createTextNode("@media screen and (orientation: portrait) {@-ms-viewport {width: 320px !important;}}@media screen and (orientation: landscape) {@-ms-viewport {width: 560px !important;}}")),
 document.getElementsByTagName("head")[0].appendChild(a));k("viewport","width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no");k("apple-mobile-web-app-capable","yes");k("apple-touch-fullscreen","yes");window.Ext||(window.Ext={});c.microloaded=!0;var m=window.Ext.filterPlatform=function(a){function b(a){var c=/Mobile(\/|\s)/.test(a);return/(iPhone|iPod)/.test(a)||!/(Silk)/.test(a)&&/(Android)/.test(a)&&(/(Android 2)/.test(a)||c)||/(BlackBerry|BB)/.test(a)&&c||
